(executable
 (public_name dblp)
 (name dblp)
 (libraries dblp-api)
 (package dblp)
)

(rule
 (alias citest)
 (package dblp)
 (action (run ./dblp.exe author mimram))
)

(rule
 (alias citest)
 (package dblp)
 (action (run ./dblp.exe find mimram type))
)

(rule
 (alias citest)
 (package dblp)
 (action (run ./dblp.exe venue lics))
)
